--- a/Index.html
+++ b/Index.html
@@ -125,7 +125,7 @@ Uno studio del 2016 del pianeta ha dimostrato, comese Mercurio non fosse abbasta
 </p>
 <br><br><br>
 
-	<li style="font-size: 40px" style="font-family: American Typewriter"> <a name=VEN>Venere</a></li><br>
+	<li style="font-size: 40px"><a name=VEN>Venere</a></li><br>
 	<p> <img src="https://media.tio.ch/files/domains/tio.ch/images/4by4/s_-nasa-venere-pianeta-terra-missioni-davinci-ritorno-qbi5.jpg?v=1" width="300px" height="300px" align="left">Venere è il secondo pianeta dal Sole ed è il pianeta più vicino alla Terra. È uno dei quattro pianeti interni, terrestri (o rocciosi), ed è spesso chiamato il gemello della Terra perché è simile per dimensioni e densità. Questi non sono gemelli identici, tuttavia, ci sono differenze radicali tra i due mondi.
 
 Venere ha un'atmosfera densa e tossica piena di anidride carbonica ed è perennemente avvolta da dense nubi giallastre di acido solforico che intrappolano il calore, provocando un effetto serra incontrollato. È il pianeta più caldo del nostro sistema solare, anche se Mercurio è più vicino al Sole. Le temperature di superficie su Venere sono di circa 900 gradi Fahrenheit (475 gradi Celsius), abbastanza calde da fondere il piombo. La superficie è di un colore ruggine ed è costellata di montagne intensamente scricchiolanti e migliaia di grandi vulcani. Gli scienziati pensano che sia possibile che alcuni vulcani siano ancora attivi.<br>
@@ -139,7 +139,7 @@ Venere è stato il primo pianeta ad essere esplorato da un veicolo spaziale: il 
 Le missioni Venere più recenti includono Venus Express dell'ESA (in orbita dal 2006 al 2016) e l'Akatsuki Venus Climate Orbiter del Giappone (in orbita dal 2016).
 
 La Parker Solar Probe della NASA ha effettuato più sorvoli di Venere. Il 9 febbraio 2022, la NASA ha annunciato che la navicella spaziale aveva catturato le sue prime immagini in luce visibile della superficie di Venere dallo spazio durante il sorvolo di febbraio 2021.</p><br><br><br>
-	<li style="font-size: 40px"style="font-family: Georgia"> <a name=TER>Terra</a></li><br>
+	<li style="font-size: 40px">  <a name=TER>Terra</a></li><br>
 	La Terra, il nostro pianeta natale, è un mondo diverso dagli altri. Il terzo pianeta dal sole, la Terra è l'unico posto nell'universo conosciuto confermato per ospitare la vita.
 Con un raggio di 3.959 miglia, la Terra è il quinto pianeta più grande del nostro sistema solare ed è l'unico noto con certezza ad avere acqua liquida sulla sua superficie. Ogni altro pianeta del sistema solare prende il nome da una divinità greca o romana, ma per almeno mille anni alcune culture hanno descritto il nostro mondo usando la parola germanica "terra", che significa semplicemente "il suolo".
 La Terra orbita attorno al Sole una volta ogni 365,25 giorni. Poiché i nostri anni di calendario hanno solo 365 giorni, aggiungiamo un giorno bisestile in più ogni quattro anni per tenere conto della differenza.<img src="https://media.istockphoto.com/photos/sunrise-and-shadow-on-the-earth-rotate-in-space-with-star-in-universe-picture-id1334034329?b=1&k=20&m=1334034329&s=170667a&w=0&h=4ZooekROFrUJ7gdiU2RGGrXzWb5nqdsZjvX2VW4Q7kA=" align="right">
